--- a/projects/01_fyyur/starter_code/templates/pages/search_venues.html
+++ b/projects/01_fyyur/starter_code/templates/pages/search_venues.html
@@ -1,9 +1,10 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Venues Search{% endblock %}
 {% block content %}
-<h3>Number of search results for "{{ search_term }}": {{ results.count }}</h3>
+{% for result in results %}
+<h3>Number of search results for "{{ search_term }}": {{ result.venue_count }}</h3>
 <ul class="items">
-	{% for venue in results.data %}
+	{% for venue in result.data %}
 	<li>
 		<a href="/venues/{{ venue.id }}">
 			<i class="fas fa-music"></i>
@@ -14,4 +15,5 @@
 	</li>
 	{% endfor %}
 </ul>
+{% endfor %}
 {% endblock %}
