--- a/projects/01_fyyur/starter_code/templates/pages/show_artist.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_artist.html
@@ -1,6 +1,13 @@
 {% extends 'layouts/main.html' %}
-{% block title %}{{ artist.name }} | Artist{% endblock %}
+
+{% block title %}
+	{% for artist in artists %}
+		{{ artist.name }} | Artist
+	{% endfor %}
+{% endblock %}
+	
 {% block content %}
+{% for artist in artists %}
 <div class="row">
 	<div class="col-sm-6">
 		<h1 class="monospace">
@@ -49,9 +56,9 @@
 		{%for show in artist.upcoming_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
-				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.venue.image_link }}" alt="Show Venue Image" />
+				<h5><a href="/venues/{{ show.venue.id }}">{{ show.venue.name }}</a></h5>
+				<h6>{{ show.start_time.strftime("%m/%d/%Y, %H:%M")|datetime('full') }}</h6>
 			</div>
 		</div>
 		{% endfor %}
@@ -63,14 +70,34 @@
 		{%for show in artist.past_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
-				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.venue.image_link }}" alt="Show Venue Image" />
+				<h5><a href="/venues/{{ show.venue.id }}">{{ show.venue.name }}</a></h5>
+				<h6>{{ show.start_time.strftime("%m/%d/%Y, %H:%M")|datetime('full') }}</h6>
 			</div>
 		</div>
 		{% endfor %}
 	</div>
 </section>
+<section>
+	<h1>
+		<form method="GET" action= "/artists/{{ artist.id }}/edit" >
+			<button class="btn btn-primary btn-lg">Edit Artist</button>
+		</form>
 
+		<button class="delete-button" data-id="{{ artist.id }}">Delete Artist</button>
+	</h1>	
+</section>
+<script>
+	const deleteBtns = document.querySelectorAll('.delete-button');
+  	for (let i = 0; i < deleteBtns.length; i++) {
+    const btn = deleteBtns[i];
+    btn.onclick = function(e) {
+      const artistId = e.target.dataset['id'];
+      fetch('/artists/' + artistId, {
+        method: 'DELETE'
+      });
+    }
+  }
+</script>
+{% endfor %}
 {% endblock %}
-
