--- a/projects/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -1,10 +1,11 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Venue Search{% endblock %}
 {% block content %}
-<div class="row">
+{% for venue in venues %}
+<div class="row" id="venue">
 	<div class="col-sm-6">
 		<h1 class="monospace">
-			{{ venue.name }}
+			{{ venue.name }}		
 		</h1>
 		<p class="subtitle">
 			ID: {{ venue.id }}
@@ -46,15 +47,17 @@
 		<img src="{{ venue.image_link }}" alt="Venue Image" />
 	</div>
 </div>
+{% endfor %}
+{% for venue in venues %}
 <section>
 	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
 		{%for show in venue.upcoming_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
-				<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.artist.image_link }}" alt="Show Artist Image" />
+				<h5><a href="/artists/{{ show.artist.id }}">{{ show.artist.name }}</a></h5>
+				<h6>{{ show.start_time.strftime("%m/%d/%Y, %H:%M")|datetime('full') }}</h6>
 			</div>
 		</div>
 		{% endfor %}
@@ -66,14 +69,37 @@
 		{%for show in venue.past_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
-				<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.artist.image_link }}" alt="Show Artist Image" />
+				<h5><a href="/artists/{{ show.artist.id }}">{{ show.artist.name }}</a></h5>
+				<h6>{{ show.start_time.strftime("%m/%d/%Y, %H:%M")|datetime('full') }}</h6>
 			</div>
 		</div>
 		{% endfor %}
 	</div>
 </section>
+<section>
+	<h1>
+		<form method="GET" action= "/venues/{{ venue.id }}/edit" >
+			<button class="btn btn-primary btn-lg">Edit Venue</button>
+		</form>
 
+		<button class="delete-button" data-id="{{ venue.id }}">Delete Venue</button>
+		
+	</h1>	
+</section>
+<script>
+	const deleteBtns = document.querySelectorAll('.delete-button');
+  	for (let i = 0; i < deleteBtns.length; i++) {
+    const btn = deleteBtns[i];
+    btn.onclick = function(e) {
+      const venueId = e.target.dataset['id'];
+      fetch('/venues/' + venueId, {
+        method: 'POST'
+      });
+    }
+  }
+</script>
+
+{% endfor %}
 {% endblock %}
 
